<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.CharityOrderDetail">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar_charity_detail"
        app:title="Order Details"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/detail_charity_restaurant_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginEnd="75dp"
        android:layout_marginTop="75dp"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar_charity_detail"
        android:textSize="20sp"
        android:text="@string/restaurant_name"
        android:textColor="@color/black"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/detail_charity_orderid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/order_id"
        android:textSize="20sp"
        android:layout_marginStart="75dp"
        android:layout_marginEnd="75dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/detail_charity_restaurant_name"
        android:textColor="@color/black"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/detail_charity_type"
        android:text="@string/food_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginEnd="75dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/detail_charity_orderid"
        android:textColor="@color/black"
        android:textSize="20sp"
        />


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/detail_charity_servings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginEnd="75dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/detail_charity_type"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:text="@string/servings"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/detail_charity_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginEnd="75dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/detail_charity_servings"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:text="@string/order_date"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/detail_charity_expiry"
        android:text="@string/food_expiry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginEnd="75dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/detail_charity_date"
        android:textColor="@color/black"
        android:textSize="20sp"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/detail_charity_status"
        android:text="@string/status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginEnd="75dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/detail_charity_expiry"
        android:textColor="@color/black"
        android:textSize="20sp"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/detail_charity_pickup"
        android:text="@string/pickup_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginEnd="75dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/detail_charity_status"
        android:textColor="@color/black"
        android:textSize="20sp"
        />

    <Spinner
        android:id="@+id/pickup_time_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginEnd="75dp"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detail_charity_pickup" />


    <Button
        android:id="@+id/accept_charity_order_btn"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/primary_light"
        android:drawableLeft="@drawable/ic_baseline_check_24"
        android:drawableTint="@color/white"
        android:text="@string/accept"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/cancel_charity_order_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_charity_pickup"
        tools:ignore="TextContrastCheck"
        android:onClick="acceptOrder"
        />

    <Button
        android:id="@+id/cancel_charity_order_btn"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/accent"
        android:drawableLeft="@drawable/ic_baseline_remove_circle_outline_24"
        android:drawableTint="@color/white"
        android:text="@string/cancel"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_charity_pickup"
        tools:ignore="TextContrastCheck"
        android:onClick="cancelOrder"
        />



</androidx.constraintlayout.widget.ConstraintLayout>