<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">



            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_username"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginTop="30dp"
                android:hint="@string/username_label"
                android:padding="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/background"
                    android:minHeight="48dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout

                android:id="@+id/layout_password"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:hint="@string/password_label"
                android:inputType="textPassword"
                android:padding="10dp"
                app:endIconMode="password_toggle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layout_username">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/background"
                    android:minHeight="48dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_phone_number"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:hint="@string/phone_number_label"
                android:inputType="phone"
                android:padding="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layout_password">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/background"
                    android:inputType="phone"
                    android:minHeight="48dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_food_type"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:hint="@string/food_type_label"
                android:padding="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layout_phone_number">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_food_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/background"
                    android:minHeight="48dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_restaurant_name"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginTop="4dp"
                android:hint="@string/restaurant_name_label"
                android:padding="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layout_food_type">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_restaurant_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/background"
                    android:minHeight="48dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_registration_id"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:hint="@string/registration_id_label"
                android:padding="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layout_restaurant_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_registration_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/background"
                    android:inputType="number"
                    android:minHeight="48dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_location"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:hint="@string/location_label"
                android:padding="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layout_registration_id">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/background"
                    android:minHeight="48dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/containedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/accent"
                android:onClick="createAccount"
                android:text="@string/button_create_restaurant"
                app:backgroundTint="@color/accent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layout_location"
                app:layout_constraintVertical_bias="0.25" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>