<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.PostActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        app:title="Available Food"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/layout_food_type_available"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="224dp"
        android:hint="@string/food_type"
        android:inputType="number"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar"
        tools:layout_editor_absoluteX="0dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_food_available"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/background"
            android:minHeight="48dp" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/layout_add_available_food"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="40dp"
        android:hint="@string/number_of_servings"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/layout_food_type_available"
        tools:layout_editor_absoluteX="0dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_food_servings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:backgroundTint="@color/background"
            android:minHeight="48dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="40dp"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/layout_add_available_food"
        tools:layout_editor_absoluteX="0dp">

        <Button
            android:id="@+id/containedButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:backgroundTint="@color/background"
            android:gravity="start|center"
            android:minHeight="48dp"
            android:onClick="expiryDate"
            android:text="@string/expiry_date"
            android:textAllCaps="false"
            />
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_baseline_save_24"
        android:onClick="createAvailable"/>


</androidx.constraintlayout.widget.ConstraintLayout>

